--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -4,7 +4,7 @@
 integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 
-<div class="container mt-5"> <!-- Add Bootstrap container class for center alignment -->
+<div class="container mt-5"> 
     <div class="profile-container">
         <div class="centered-content">
             <div class="profile-image">
@@ -13,7 +13,7 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
             <div class="profile-form">
                 <form action="" method="post" enctype="multipart/form-data">
 
-                    <!-- Add Bootstrap form-control class for styling -->
+            
                     <input type="file" name="image" class="form-control">
                     <input type="hidden" name="user_id" value="<%= user._id %>">
                     <br><br>
