--- a/views/users/otpPage.ejs
+++ b/views/users/otpPage.ejs
@@ -1,5 +1,38 @@
-<%- include('../layouts/admin/header.ejs') %>
+<!DOCTYPE html>
+<html lang="en">
 
+
+<!-- molla/login.html  22 Nov 2019 10:04:03 GMT -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Brand Kicks! Step into Style with Confidence</title>
+    <meta name="keywords" content="HTML5 Template">
+    <meta name="description" content="Brand Kicks! ">
+    <meta name="author" content="p-themes">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <link rel="manifest" href="/public/userAssets/assets/images/icons/site.html">
+    <link rel="mask-icon" href="/public/userAssets/assets/images/BRAND KICKS! black.png" color="#666666">
+    <link rel="shortcut icon" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <meta name="apple-mobile-web-app-title" content="Brand Kicks!">
+    <meta name="application-name" content="Brand Kicks!">
+    <meta name="msapplication-TileColor" content="#cc9966">
+    <meta name="msapplication-config" content="/public/userAssets/assets/images/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Plugins CSS File -->
+    <link rel="stylesheet" href="/public/assets/css/bootstrap.min.css">
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="/public/assets/css/style.css">
+    
+</head>
+<body>
+    <a href="/">
+        <img src="/public/userAssets/assets/images/BRAND KICKS! white.png" class="md-5" style="height: 60px; position: absolute; top: 20px; left: 20px;" alt="">
+        </a>
 <main class="main">
 
     <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('/public/userAssets/assets/images/backgrounds/shoes-login.jpg')">
