--- a/views/users/registration.ejs
+++ b/views/users/registration.ejs
@@ -40,7 +40,7 @@
                 <div class="form-tab">
                     <ul class="nav nav-pills nav-fill" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#" role="tab">Sign Up</a>
+                            <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#" role="tab">register</a>
                         </li>
                     </ul>
                     <div class="tab-content">
