--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -248,7 +248,7 @@
                             </a>
       
                             <div class="product-action-vertical">
-                                <a href="#" class="btn-product-icon btn-wishlist " onclick="addtoWishList('<%= products[i]._id %>','<%= user %>')"><span>add to wishlist</span></a>
+                                <a href="#" class="btn-product-icon btn-wishlist " ><span>add to wishlist</span></a>
                             </div><!-- End .product-action-vertical -->
                         </figure><!-- End .product-media -->
       
@@ -263,7 +263,7 @@
                             </div><!-- End .product-price -->
                         </div><!-- End .product-body -->
                         <div class="product-action">
-                            <a   class="btn-product btn-cart" onclick="addCart('<%= products[i]._id %>','<%= user %>')"><span>add to cart</span></a>
+                            <a   class="btn-product btn-cart" ><span>add to cart</span></a>
                         </div><!-- End .product-action -->
                     </div><!-- End .product -->
                 </div><!-- End .col-sm-6 col-md-4 col-lg-3 -->
