--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,37 +1,143 @@
-<%- include('../layouts/header') %>
-
-<div class="login-page">
-    <div class="form">
-
-<h1 class="head">Login</h1>
-
-<% if (typeof message !== 'undefined') { %>
-    <div class="alert alert-primary text-center" id="errorDisplay">
-      <%= message %>
-    </div>
-  <% } %>  
-
-<form action="/login" method="post" id="myForm" onsubmit="return validateForm()">
-    <!-- <div class="input-container"> -->
-    <input type="email" name="email" placeholder="Enter email" id="email">
-    <p id="email-error" class="error-message"></p>
-    
-
-    <div class="input-container">
-        <input type="password" name="password" required placeholder="Enter password" id="password">
-        <p id="password-error" class="error-message"></p>
-    </div>    
-    <br>
-    <button type="submit"  value="Login">Login</button>
-    <p class="message">Not registered? <a href="/register">Registeration</a></p>
-
-    
-</form>
-<a href="/forget">Forget Password</a>
-<br>
-<!-- <a href="/verification">Verification</a> -->
- </div>
+<!DOCTYPE html>
+<html lang="en">
 
 
+<!-- molla/login.html  22 Nov 2019 10:04:03 GMT -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Brand Kicks! Step into Style with Confidence</title>
+    <meta name="keywords" content="HTML5 Template">
+    <meta name="description" content="Brand Kicks! ">
+    <meta name="author" content="p-themes">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <link rel="manifest" href="/public/userAssets/assets/images/icons/site.html">
+    <link rel="mask-icon" href="/public/userAssets/assets/images/BRAND KICKS! black.png" color="#666666">
+    <link rel="shortcut icon" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
+    <meta name="apple-mobile-web-app-title" content="Brand Kicks!">
+    <meta name="application-name" content="Brand Kicks!">
+    <meta name="msapplication-TileColor" content="#cc9966">
+    <meta name="msapplication-config" content="/public/userAssets/assets/images/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Plugins CSS File -->
+    <link rel="stylesheet" href="/public/assets/css/bootstrap.min.css">
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="/public/assets/css/style.css">
+  
+      
+</head>
+<body>
+    <a href="/">
+    <img src="/public/userAssets/assets/images/BRAND KICKS! white.png" class="md-5" style="height: 60px; position: absolute; top: 20px; left: 20px;" alt="">
+    </a>
+    <main class="main">
+    <!-- <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
+        <div class="container">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Login</li>
+            </ol>
+        </div><!-- End .container -->
+    </nav>
 
-<%- include('../layouts/footer') %> 
+    <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('/public/assets/images/backgrounds/bg-2.jpg')">
+        <div class="container">
+            <div class="form-box">
+                <div class="form-tab">
+                    <ul class="nav nav-pills nav-fill" role="tablist">
+
+                        <li class="nav-item">
+                            <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#" role="tab" >Log In</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
+                            <form action="/login" method="post" id="form" onsubmit="return validateForm()" novalidate>
+                                
+                                <%if (typeof message !== 'undefined') { %>
+                                    <p style="color: red; font-size: 19px; font-weight: 300;">
+                                      <%= message %>
+                                    </p>
+                                    
+                                    <% } %>
+                                    
+                                <div class="form-group">
+                                    <label for="register-email-2">Your email address *</label>
+                                    <input type="email" class="form-control" id="register-email-2" name="email" >
+                                    <p id="email-error" class="error-message"></p>
+                                </div><!-- End .form-group -->
+
+                                <div class="form-group">
+                                    <label for="register-password-2">Password *</label>
+                                    <input type="password" class="form-control" id="password-" name="password" >
+                                    <p id="password-error" class="error-message" style="color: red; font-size: 16px; font-weight: 300;"></p>
+                                </div><!-- End .form-group -->
+
+                                <div class="form-footer">
+                                    <button type="submit" class="btn btn-outline-primary-2">
+                                        <span>LOG IN</span>
+                                        <i class="icon-long-arrow-right"></i>
+                                    </button>
+                                    <!-- <a href="#" class="forgot-link">Forgot Your Password?</a> -->
+                                </div><!-- End .form-footer -->
+                                <div id="component" class="container-fluid py-3 text-center">
+                                <a href="/auth/google">
+                                  </a>
+  
+                                    <p class=" m-0 px-3 py-2">
+                                        <span class="text-secondary fs-6 fw-normal font-family-Poppins">
+                                        Dont Have Account?
+                                        </span>
+                                        <a class="text-black fs-6 fw-normal font-family-Poppins text-decoration-underline " href="/signup" >
+                                        Signup
+                                        </a>
+                                    </p>
+                                    <a href="/forget">Forgot Password?</a>      
+                                </div>
+                            </form>
+                            
+                        </div><!-- .End .tab-pane -->
+                            </form> 
+                        </div><!-- .End .tab-pane -->
+                    </div><!-- End .tab-content -->
+                </div><!-- End .form-tab -->
+            </div><!-- End .form-box -->
+        </div><!-- End .container -->
+    </div><!-- End .login-page section-bg -->
+</main><!-- End .main -->
+
+
+
+<%- include('../layouts/user/footer.ejs') -%>
+
+<script>
+    function validateForm() {
+        const email = document.getElementById("register-email-2").value;
+        const password = document.getElementById("password-").value;
+
+        // Email validation using a regular expression
+        const emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
+        if (!email.match(emailPattern)) {
+            document.getElementById("email-error").textContent = "Invalid email format.";
+            return false;
+        } else {
+            document.getElementById("email-error").textContent = "";
+        }
+
+        // Password validation (must be at least 8 characters )
+        const passwordPattern = /^\S{8,}$/;
+        if (!password.match(passwordPattern)) {
+            document.getElementById("password-error").textContent = "Password must be at least 8 characters long and cannot contain spaces.";
+            return false;
+        } else {
+            document.getElementById("password-error").textContent = "";
+        }
+
+        return true;
+    }
+</script>
