--- a/views/layouts/user/footer.ejs
+++ b/views/layouts/user/footer.ejs
@@ -102,6 +102,7 @@
 <script src="/public/assets/js/jquery.plugin.min.js"></script>
 <script src="/public/assets/js/jquery.magnific-popup.min.js"></script>
 <script src="/public/assets/js/jquery.countdown.min.js"></script>
+<script src="/public/assets/js/jquery.elevateZoom.min.js"></script>
 <!-- Main JS File -->
 <script src="/public/assets/js/main.js"></script>
 <script src="/public/assets/js/demos/demo-2.js"></script>
