--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -43,7 +43,7 @@
                                     <figure class="product-main-image">
                                         <img id="product-zoom"
                                             src="/public/userImages/<%= product.image %>"
-                                            data-zoom-image="/public/products/images/<%= product.image %>"
+                                            data-zoom-image="/public/userImages/<%= product.image %>"
                                             alt="product image" />
 
                                         <!-- <a href="#" id="btn-product-gallery" class="btn-product-gallery">
@@ -55,7 +55,7 @@
                                     <div id="product-zoom-gallery" class="product-image-gallery">
                                         <a class="product-gallery-item active" href="#"
                                             data-image="/public/products/images/<%= product.image%>"
-                                            data-zoom-image="/public/products/images/<%= product.image %>">
+                                            data-zoom-image="/public/userImages/<%= product.image %>">
                                             <img src="/public/userImages/<%= product.image %>"
                                                 alt="product side" />
                                         </a>
