--- a/views/layouts/user/header.ejs
+++ b/views/layouts/user/header.ejs
@@ -109,7 +109,7 @@
 
                     <div class="header-right">
                         <div class="account">
-                            <a href="dashboard.html" title="My account">
+                            <a href="/profile" title="My account">
                                 <div class="icon">
                                     <i class="icon-user"></i>
                                 </div>
@@ -152,10 +152,10 @@
                                     <a href="/" class="">Home</a>
                                 </li>
                                 <li>    
-                                    <a href="/shop" class="">Shop</a>
+                                    <a href="/shop" class="">Shop</a>   
                                 </li>
                                 <li>
-                                    <a href="product.html" class="">Product</a>
+                                    <a href="product.html">Product</a>
 
                                     <div class="megamenu megamenu-sm">
                                         <div class="row no-gutters">
@@ -184,7 +184,7 @@
                                     </div><!-- End .megamenu megamenu-sm -->
                                 </li>
                                 <li>
-                                    <a href="#" class="sf-with-ul">Pages</a>
+                                    <a href="#" >Pages</a>
 
                                     <ul>
                                         <li>
