--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -93,7 +93,7 @@
                                         <span class="text-secondary fs-6 fw-normal font-family-Poppins">
                                         Dont Have Account?
                                         </span>
-                                        <a class="text-black fs-6 fw-normal font-family-Poppins text-decoration-underline " href="/signup" >
+                                        <a class="text-black fs-6 fw-normal font-family-Poppins text-decoration-underline " href="/register" >
                                         Signup
                                         </a>
                                     </p>
