cart add home fix

--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -145,7 +145,7 @@
                             </table><!-- End .table table-summary -->
                     
                             <div class="text-center mt-3">
-                                <a href="checkout.html" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
+                                <a href="checkout" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
                             </div>
                     
                             <div class="text-center mt-3">
