--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -294,7 +294,44 @@
 
         return password.length >= minLength && noSpaces;
     }
+    function removeAddress(id) {
+    // Display confirmation dialog
+    Swal.fire({
+        title: 'Are you sure?',
+        text: 'You won\'t be able to revert this!',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, remove it!'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            // User clicked the confirm button, proceed with the removal
+            $.ajax({
+                url: '/deleteAddress',
+                method: 'delete',
+                data: { id },
+                success: (response) => {
+                    if (response.remove == 1) {
+                        // Display success message
+                        Swal.fire({
+                            title: 'Success!',
+                            text: 'Address removed!',
+                            icon: 'success',
+                            timer: 2000,
+                        }).then(() => {
+                            window.location.reload();
+                        });
+                    }
+                },
+            });
+        }
+    });
+}
+
+
 </script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script src="/public/assets/js/validationaddress.js"></script>
 
