--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -54,7 +54,7 @@
         
                                                 <hr class="my-3">
                                                 <div class="d-flex justify-content-between">
-                                                    <a href="/editAddress?id=<%= address.address[i]._id %>">
+                                                    <a href="/editCheckout?id=<%= address.address[i]._id %>">
                                                         <button class="btn btn-outline-primary-2"
                                                             type="button" id="editBTN"
                                                             data-bs-toggle="modal" data-bs-target="">
@@ -294,5 +294,46 @@
 <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+<script>
+
+function removeAddress(id) {
+    // Display confirmation dialog
+    Swal.fire({
+        title: 'Are you sure?',
+        text: 'You won\'t be able to revert this!',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, remove it!'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            // User clicked the confirm button, proceed with the removal
+            $.ajax({
+                url: '/deleteAddress',
+                method: 'delete',
+                data: { id },
+                success: (response) => {
+                    if (response.remove == 1) {
+                        // Display success message
+                        Swal.fire({
+                            title: 'Success!',
+                            text: 'Address removed!',   
+                            icon: 'success',
+                            timer: 2000,
+                        }).then(() => {
+                            window.location.reload();
+                        });
+                    }
+                },
+            });
+        }
+    });
+}
+
+</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 <%- include('../layouts/user/footer.ejs') %>
