--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -121,6 +121,11 @@
                                                 <td><%= data.totalPrice %></td>
                                             </tr>
                                         <% }) %>
+
+                                        <tr>
+                                            <td>Shipping:</td>
+                                            <td>Free shipping</td>
+                                        </tr>
                                 
                                         <tr class="summary-subtotal">
                                             <td>Subtotal:</td>
